'レスポンシブ追加。次、図形いじってる'

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
 いじったやつ一覧
 <ul>
-    <li><a href="practice/01_popup_js/popup.html">ポップアップ</a></li>
-    <li><a href="practice/02_MouseOver_css/01_MouseOver.html">マウスオーバー</a></li>
+    <li><a href="practice/01_popUp_js/popUp.html">ポップアップ</a></li>
+    <li><a href="practice/02_MouseOver_css/MouseOver.html">マウスオーバー</a></li>
+    <li><a href="practice/03_Responsive_css/responsive.html">レスポンシブ</a></li>
     <li></li>
     <li></li>
     <li></li>
