--- a/practice/02_MouseOver_css/MouseOver.html
+++ b/practice/02_MouseOver_css/MouseOver.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset=utf-8>
 	<title>マウスオーバー</title>
-	<link rel="stylesheet" type="text/css" href="01_MouseOver.css">
+	<link rel="stylesheet" type="text/css" href="MouseOver.css">
 </head>
 
 
